[package]
name = "api-xkcd"
authors = ["John Chen <john.hk.chen@gmail.com>"]
description = "XKCD Comic Getter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
maud = "0.25.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }

[workspace]
