[package]
name = "htmx-sandbox"
authors = ["John Chen <john.hk.chen@gmail.com>"]
description = "Sends HTMX components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
maud = "0.25.0"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }

[workspace]
